--- a/main.css
+++ b/main.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.cdnfonts.com/css/ica-rubrik-black');
 @import url('https://fonts.cdnfonts.com/css/poppins');
 
+
 * {
     margin: 0;
     padding: 0;
@@ -101,7 +102,7 @@ body {
     font-size: 3em;
 }
 .banner .content .model {
-    background-image: url(/media/main-anime-character-rain.png);
+    background-image: url(media/main-anime-character-rain.png);
     width: 100%;
     height: 75vh;
     position: absolute;
@@ -118,12 +119,225 @@ body {
 /* ABOUT ME  */
 
 .about-me {
-    background-color: rgb(149, 121, 165);
-    background: linear-gradient(to bottom right, #9579a5, #2a262c);
-    height: 58em;
+    background-color: rgba(149, 121, 165, 0.493);
+    background: linear-gradient(to bottom right, #9579a5b0, #2a262cc4);
+
+    width: 93%;
+    max-width: 800px;
+    min-height: 500px;
+    padding: 20px;
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.61);
+    border-radius: 7px;
+    margin: 20px;
 }
 
+  .img-container img {
+    width: 170px;
+    height: 170px;
+    
+    margin: 20px 150px;
+  }
 
+  .text-container h1 {
+    font-size: 2rem;
+    color: #25283B;
+    padding-bottom: 10px;
+  }
+  
+  .text-container p {
+    font-size: 1rem;
+  }
+
+  /* MY PROJECTS */
+
+  .projects-text h1 {
+    font-size: 2rem;
+    color: #25283B;
+    margin: 50px 0 20px 30px;
+  }
+
+  .projects-text p {
+    margin-left: 30px;
+  }
+
+  .card {
+    position: relative;
+    width: 93%;
+    height: 400px;
+    background: url('/portfolio/media/laikinas1.png') no-repeat center/cover;
+    border-radius: 10px;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    color: white;
+    margin-left: 20px;
+}
+
+.card:hover {
+    background: #52436be0;
+    background: linear-gradient(to bottom right, #9579a5b0, #2a262cc4);
+}
+
+.card-content {
+    position: absolute;
+    bottom: 20px;
+    opacity: 0;
+}
+
+.card:hover .card-content {
+    opacity: 1;
+}
+
+.card-content h3 {
+    margin: 0;
+    font-size: 24px;
+}
+
+.card-content p {
+    font-size: 16px;
+    margin: 10px 0;
+}
+
+.card-content button {
+    background: transparent;
+    border: 2px solid white;
+    color: white;
+    padding: 10px 15px;
+    cursor: pointer;
+    transition: background 0.3s;
+}
+
+.card-content button:hover {
+    background: white;
+    color: black;
+}
+
+    /* FORM  */
+
+.form-text h1 {
+    font-size: 3rem;
+    color: #4f4083;
+    margin: 30px 0 15px 15%;
+}
+
+.form-text p {
+    margin-left: 15%;
+    font-weight: bold;
+    font-size: 15px;
+}
+
+.form-container {
+    padding: 20px 30px;
+    border-radius: 10px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    margin-bottom: 5px;
+}
+
+label {
+    display: block;
+    margin: 50px 5px 5px;
+    font-weight: bold;
+    font-size: 13px;
+    color: #25283B;
+}
+
+input, textarea {
+    width: 100%;
+    padding: 10px;
+    border: none;
+    border-bottom: 2px solid #52436b5e;
+    outline: none;
+    background: transparent;
+    font-size: 16px;
+    font-family: inherit;
+    font-size: inherit;
+}
+
+textarea {
+    font-family: inherit;
+    font-size: inherit;
+    resize: none;
+    height: 80px;
+}
+
+input:focus::placeholder, textarea:focus::placeholder {
+    color: transparent;
+}
+
+  /* FORM SUBMIT BUTTON */
+  /* TO DO: REDAGUOTI */
+
+.project-button {
+    font-size: 18px;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    display: inline-block;
+    text-align: center;
+    font-weight: bold;
+    padding: 0.2em 2em;
+    border: 3px solid #25283B;
+    border-radius: 15px;
+    position: relative;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.16), 0 3px 6px rgb(0, 0, 0, 0.1);
+    color: #25283B;;
+    text-decoration: none;
+    transition: 0,3s ease all;
+    z-index: 1;
+    cursor: pointer;
+    margin: 30px 0 15px 35%;
+ }
+
+.project-button::before {
+    transition: 0,5s all ease;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    right: 50%;
+    bottom: 0;
+    opacity: 0;
+    content: '';
+    background-color: #25283B;;
+    z-index: -1;
+  }
+
+.project-button:hover, .project-button:focus {
+    color: #ffffff;
+}
+
+.project-button:hover::before, .project-button:focus::before {
+    transition: 0.5s all ease;
+    left: 0;
+    right: 0;
+    border-radius: 8px;
+    opacity: 1;
+}
+
+.project-button:active {
+    transform: scale(0.9);
+}
+
+/* FOOTER  */
+
+footer {
+    background-color: #25283B;
+    height: 30vh;
+}
+
+.social-icons a {
+    color: white;
+    text-decoration: none;
+    transition: color 0.3s ease;
+}
+
+.social-icons a:hover {
+    color: #6e5bb4;
+}
+
+  
+  
+  
 
 
 
